# genesis

./: .bandit  .editorconfig  .env.example  .envrc  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .tflint.hcl  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SECURITY_ASSESSMENT_REPORT.md  DIRECTORY_STRUCTURE_PLAN.md  EXECUTIVE_MIGRATION_DECISION.md  EXTRACTION_PLAN.md  GENESIS.md  GENESIS_BUILD_PLAN.md  GENESIS_CLI_TEST_REPORT.md  GENESIS_HOW_TO_GUIDE.md  INTEGRATION_SUMMARY.md  ISSUE_15_IMPLEMENTATION.md  ISSUE_31_COMPLETION_SUMMARY.md  ISSUE_32_COMPLETION_SUMMARY.md  ISSUE_33_COMPLETION_REPORT.md  MCP_PROTOCOL_IMPLEMENTATION.md  MIGRATION.md  MIGRATION_COORDINATION.md  MIGRATION_READINESS_ASSESSMENT.md  Makefile  OLD_CODE_ANALYSIS.md  PROGRESS_DASHBOARD.md  PROJECT_INDEX.json  README.md  RELEASE_NOTES.md  SAFETY.md  SECURITY.md  SECURITY_VALIDATION_REPORT.md  TESTING_VALIDATION_REPORT.md  YAML_CONFIGURATION_TEST_REPORT.md  (+17 more)
.claude/: settings.json
.github/: dependabot.yml
bootstrap/: README.md
cli/: CRAFT_VALIDATION_REPORT.md  README.md
config/: README.md  genesis.yml  global.yaml  mcp-development.yaml  mcp-production.yaml  project.env  secret-policies.yaml  secrets.yaml  unified_config.py
coordination/: README.md  system_coordinator.py
core/: INTEGRATION.md  README.md  __init__.py
deploy/: README.md  deploy-orchestrator.sh
docs/: CLAUDE.md  README.md  mcp-integration-guide.md
examples/: Makefile-gcp-isolation.example  async_service.py  core_usage.py  envrc-whai-gemini.example  gcp_performance_monitoring.py  health_and_context_integration.py  microservice_template.py
genesis/: README.md  __init__.py  cli.py
genesis-cli/: README.md  setup.py
governance/: README.md  governance-config.yaml  pipes-standardization-framework.yaml
intelligence/: README.md  self-healing.py
intelligence/smart-commit/: .coverage  README.md  pyproject.toml
intelligence/smart-commit/src/smart_commit/: __init__.py  cli.py  detector.py  git_integration.py  orchestrator.py  quality.py  stability.py  tools.py  version.py
intelligence/smart-commit/tests/: __init__.py  test_detector.py  test_stability.py
isolation/: README.md
lib/: README.md
modules/: README.md
monitoring/: COMPLETION_SUMMARY.md  README.md  comprehensive-observability-stack.yaml  mcp-health-monitor.py
projects/: README.md  registry-enhanced.yaml  registry.yaml  registry.yaml.backup
scripts/: README.md  bootstrap.sh  check-ai-signatures.sh  check-file-organization.sh  check-progress.sh  check-variable-defaults.sh  cleanup.sh  debug-test.sh  deploy-multiple-projects.sh  find-hardcoded-values.sh  mcp-performance-validation.py  protect-main-from-ai.sh  secret-shield-automation.py  setup-gcp-isolation-universal.sh  setup-genesis-config.py  test-detection-scripts.sh  test_security_automation.py  validate-components.sh  validate-config.sh
setup-project/: README.md  example-usage.sh  requirements.txt  setup.py
shared-python/: .gitignore  README.md  pyproject.toml
shared-python/src/shared_core/: __init__.py  config.py  context.py  errors.py  health.py  logger.py  retry.py
shared-python/tests/: test_config.py  test_health.py  test_logger.py  test_retry.py
shared-typescript/: README.md  package-lock.json  package.json
smart-commit/: README.md
templates/: .gitignore  .pre-commit-config.yaml  CLAUDE.md.template  Makefile  README.md  pyproject.toml
templates/cli-tool/: Makefile.template  README.md.template  pyproject.toml.template  template.json
templates/cli-tool/src/__project_name__/: cli.py.template  main.py.template
templates/cli-tool/tests/: test_cli.py.template
templates/cloud-function/: .gcloudignore
templates/cloud-run/: .gcloudignore
templates/python-api/: .bandit.template  .gitignore.template  .gitleaks.toml.template  .pre-commit-config.yaml.template  .pylintrc.template  CHANGELOG.md.template  CLAUDE.md.template  Makefile.template  README.md.template  pyproject.toml.template  setup.sh.template  template.json
templates/python-api/config/: README.md.template
templates/python-api/docs/: CLAUDE.md.template  README.md.template
templates/python-api/docs/architecture/: CLAUDE.md.template
templates/python-api/docs/releases/: README.md.template  v0.1.0.md.template
templates/python-api/docs/standards/: CLAUDE.md.template
templates/python-api/docs/vision/: CLAUDE.md.template
templates/python-api/scripts/: README.md.template
templates/python-api/src/__module_name__/: __init__.py.template  main.py.template
templates/python-api/src/__project_name__/: main.py.template
templates/python-api/tests/: test_main.py.template
templates/terraform-project/: .gitignore  .gitignore.template  Makefile  README.md  main.tf  outputs.tf  template.json  terraform.tfvars.example  variables.tf
templates/typescript-service/: .dockerignore  .env.example  Dockerfile  Makefile.template  README.md.template  jest.config.js  package.json  package.json.template  pyproject.toml  template.json  tsconfig.json.template
templates/typescript-service/build_tools/: __init__.py  builder.py  cli.py
templates/typescript-service/scripts/: deploy-to-gcp.sh
templates/typescript-service/src/: app.ts.template  index.ts  index.ts.template  server.ts
templates/typescript-service/src/config/: index.ts
templates/typescript-service/src/middleware/: auth.ts  error-handler.ts  metrics.ts
templates/typescript-service/src/routes/: api.ts  health.ts  health.ts.template  index.ts
templates/typescript-service/src/services/: gcp.ts  health.ts  mcp.ts  metrics.ts
templates/typescript-service/src/types/: errors.ts
templates/typescript-service/src/utils/: logger.ts  retry.ts  shutdown.ts
templates/typescript-service/tests/: app.test.ts.template  setup.ts
templates/typescript-service/tests/unit/services/: gcp.test.ts
terraform/: README.md
test-project/: .bandit  .env.example  .envrc  .gitleaks.toml  .pylintrc  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.sh
testing/: README.md
tests/: GENESIS_COMPREHENSIVE_TEST_REPORT.md  PRODUCTION_READINESS_CERTIFICATE.md  README.md  (+29 more)
(+658 files in other folders)
