[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "genesis"
version = "0.1.0"
description = "Genesis Development Toolkit - Unified package for lean, AI-safe projects"
authors = ["Genesis Team"]
readme = "README.md"
packages = [{include = "genesis"}]
include = [
    "templates/**/*",
    "smart-commit/**/*",
    "worktree-tools/**/*",
    "scripts/**/*",
]
exclude = [
    "**/.terraform/**",
    "**/.terraform.lock.hcl",
    "**/terraform.tfstate*",
    "**/*.tfvars",
    "**/*tfplan*",
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
pydantic = "^2.5.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"

[tool.poetry.scripts]
genesis = "genesis.cli:cli"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests across components",
    "e2e: End-to-end tests for complete workflows",
    "ai_safety: Tests for AI safety constraints (file counts, isolation)",
    "slow: Tests that take more than 2 seconds",
    "requires_git: Tests that need git operations",
    "requires_network: Tests that need network access",
    "asyncio: Async/await tests using asyncio",
]
testpaths = [
    "bootstrap/tests",
    "genesis-cli/tests",
    "shared-python/tests",
    "smart-commit/tests",
    "worktree-tools/tests",
    "testing/tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = ["genesis"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
