[tool.poetry]
name = "smart-commit"
version = "0.1.0"
description = "Smart-commit workflow system for quality-gated commits across all technologies"
authors = ["SOLVE Team <solve@example.com>"]
readme = "README.md"
packages = [{include = "smart_commit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"
pyyaml = "^6.0"
rich = "^13.0"
gitpython = "^3.1"
toml = "^0.10"
psutil = "^5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.21"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"
bandit = {extras = ["toml"], version = "^1.7"}

[tool.poetry.scripts]
smart-commit = "smart_commit.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
